refactor(order): pre-validate product availability before OTP, add rate limit & fix OTP reliability
- Add validateProductAvailability() UX layer - reject unavailable products before sending OTP
- Add resolveProductsToBuy() private method - single source of truth, eliminates 4x duplicate product loading logic
- Add validateOrderLimit(List<Product>) overload - no extra DB hit
- Add getProductsByIds(), loadProductsForOrder() for controller pre-validation
- Add OTP rate limit: 60s cooldown using DB createdAt (no Redis needed at current scale)
- Fix OTP reliability: send email BEFORE saving to DB - avoids orphaned OTP records on mail failure
- Add EmailService.sendGuestOrderOtpOrThrow() - throws MailException instead of silently swallowing
- Fix catch(Exception ignored) -> catch(NumberFormatException | ClassCastException) with log
- Add pre-validation for logged-in users in checkout() endpoint
- Add @Slf4j to OrderApiController for proper logging
- Response now includes unavailableProducts[] with productId, productName, status
- Response 429 includes retryAfterSeconds field

Phương Án B (Targeted Refactor): no DB schema changes, no new entities, 3 files changed